--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             </div>
         </header>
 
+        <!-- Seção de Aplicações -->
+        <div class="section-divider">
+            <h2 class="section-title">Aplicações Web</h2>
+            <div class="divider-line"></div>
+        </div>
+
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-icon">⏰</div>
@@ -105,7 +111,7 @@
                 <div class="project-icon">🃏🧠</div>
                 <div class="project-title">Jogo da memoria</div>
                 <div class="project-description">
-                    Um jogo da memória moderno, divertido e responsivo feito com tecnologias web.ㅤㅤㅤ
+                    Um jogo da memória moderno, divertido e responsivo feito com tecnologias web.
                 </div>
                 <div class="project-tags">
                     <span class="tag">HTML</span>
@@ -116,13 +122,23 @@
                     Projeto
                     →</a>
             </div>
+        </div>
 
+        <!-- Divisão entre Aplicações e Sites -->
 
+        <div class="section-divider">
+            <br>
+            <br>
+            <h2 class="section-title">Sites Completos | Landing Pages</h2>
+            <div class="divider-line"></div>
+        </div>
+
+        <div class="projects-grid">
             <div class="project-card">
                 <div class="project-icon">🏠</div>
                 <div class="project-title">MobiHome</div>
                 <div class="project-description">
-                    Um site focado na venda de produtos para mobiliar casas ou apartamentos.ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
+                    Um site focado na venda de produtos para mobiliar casas ou apartamentos.
                 </div>
                 <div class="project-tags">
                     <span class="tag">HTML</span>
@@ -138,7 +154,7 @@
                 <div class="project-icon">🚗</div>
                 <div class="project-title">AutoElite</div>
                 <div class="project-description">
-                    Concessionaria: Venda e compras de veiculos. ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
+                    Concessionaria: Venda e compras de veiculos.
                 </div>
                 <div class="project-tags">
                     <span class="tag">HTML</span>
@@ -154,7 +170,7 @@
                 <div class="project-icon">🎮</div>
                 <div class="project-title">NexusTech</div>
                 <div class="project-description">
-                    Assistência com foco em reparo de celulares, teclado, fones e venda de utensílios gamers. ㅤㅤㅤ
+                    Assistência com foco em reparo de celulares, teclado, fones e venda de utensílios gamers.
                 </div>
                 <div class="project-tags">
                     <span class="tag">HTML</span>
@@ -165,10 +181,6 @@
                     Projeto
                     →</a>
             </div>
-
-
-
-
         </div>
 
         <div class="contact-section">
