--- a/index.html
+++ b/index.html
@@ -454,17 +454,16 @@
                     </div>
                     <div class="project-status">Live</div>
                 </div>
-                <div class="project-title">NexusTech</div>
+                <div class="project-title">Aura RPG</div>
                 <div class="project-description">
-                    Assistência técnica com foco em reparo de celulares,
-                    teclados, fones e venda de utensílios gamers.
+                    Site feito para o Aura(Game) com descrições de raça e lores totalmente modular.
                 </div>
                 <div class="project-tags">
                     <span class="tag">HTML</span>
                     <span class="tag">CSS</span>
                     <span class="tag">JavaScript</span>
                 </div>
-                <a href="https://ikarusrk.github.io/Assistencia-Reparos/" target="_blank" class="project-link">
+                <a href="https://aurarpg.netlify.app/" target="_blank" class="project-link">
                     Ver Projeto
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                         <path d="M6 3L11 8L6 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
