--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR" data-theme="purple" data-mode="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/patinha.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-react</title>
+    <title>Daniel Reis | Desenvolvedor Full Stack</title>
+    <script>
+      try {
+        var t = localStorage.getItem('portfolio-theme') || 'purple';
+        var m = localStorage.getItem('portfolio-mode') || 'dark';
+        document.documentElement.setAttribute('data-theme', t);
+        document.documentElement.setAttribute('data-mode', m);
+      } catch (e) {}
+    </script>
   </head>
   <body>
     <div id="root"></div>
